testing out git

--- a/ScholarshipScout.ipynb
+++ b/ScholarshipScout.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "# ScholarshipScout\n",
-        "\n",
+        "TEST\n",
         "This notebook implements the ScholarshipScout project, an Multi-Agent AI based web scraper to search for fully funded doctorate positions from popular academic position websites.\n",
         "\n",
         "## Step 1: Install Dependencies\n",
